Update Project scaffolding and manual version control.Rmd

--- a/Topics/01_Project_scaffolding_and_manual_version_control/Project scaffolding and manual version control.Rmd
+++ b/Topics/01_Project_scaffolding_and_manual_version_control/Project scaffolding and manual version control.Rmd
@@ -1,7 +1,7 @@
 
 ## Project scaffolding and manual version control
-author: "August Hao"
-date: "3 March 2017"
+## August Hao
+## 3 March 2017
 
 
 ### What is scaffolding?
