--- a/Misc/functions.Rmd
+++ b/Misc/functions.Rmd
@@ -26,7 +26,7 @@ return(output)
 
 Here, `name` is naturally the name of your function which you will use to call up later on. `argument1`, `argument2` etc are the names of variables which you *pass* to the function to be used in the `expressions` in the braces. You can see how it almost works just like loops/statements, with the exception that it has `arguments`. One important aspect/advantage of functions is that they come with their own *environment*, which means any variables you have defined **inside** the braces will not be present in your global environment, thus keeping your global environment tidy. The `return(output)` bit at the bottom tells R what you want out of your function. There are a few caveats about it: if you do not define return R will return the result of your last expression in the braces, and if you run a function without assigning it to a variable, the returned result will only be printed in your console, so remember to assign the output of a function! If you are interested on reading more about it check out [SpuR textbook, Chapt5](https://www-taylorfrancis-com.ezp.lib.unimelb.edu.au/books/9781420068740).  
 
-## Example function: comparing predictor importance between a linear model and a Random Forest
+## Example function: NA operations
 
 At this point you probably feel bamboozled, none of which I've said probably makes sense or feels useful. Don't worry, that's just my horrible teaching style, I promise functions tend to be more awesome than what I've described. To redeem functions to you, let's look at an example.  
 
